make selenium as configable