@@ -131,10 +131,6 @@
                     <groupId>org.seleniumhq.selenium</groupId>
                     <artifactId>selenium-iphone-driver</artifactId>
                 </exclusion>
-                <exclusion>
-                    <groupId>org.seleniumhq.selenium</groupId>
-                    <artifactId>selenium-htmlunit-driver</artifactId>
-                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
@@ -352,6 +348,7 @@
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
                     <configuration>
+                        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                         <scanIntervalSeconds>10</scanIntervalSeconds>
                         <stopKey>foo</stopKey>
                         <stopPort>9999</stopPort>
